20250527 - Re-initialize project