@@ -12,7 +12,7 @@ CREATE TABLE IF NOT EXISTS public.tm_member_group
     ket_modify character varying(255) COLLATE pg_catalog."default",
     kd_member_group character varying(10) COLLATE pg_catalog."default",
     nama character varying(255) COLLATE pg_catalog."default",
-    kd_identity_type character varying(10) COLLATE pg_catalog."default",
+    kd_identity_type character varying(20) COLLATE pg_catalog."default",
     no_identitas character varying(30) COLLATE pg_catalog."default",
     CONSTRAINT tm_member_group_pkey PRIMARY KEY (id)
 )
