@@ -12,7 +12,7 @@ CREATE TABLE IF NOT EXISTS public.tm_member_role
     ket_modify character varying(20) COLLATE pg_catalog."default",
     kd_member character varying(20) COLLATE pg_catalog."default",
     kd_family_role character varying(6) COLLATE pg_catalog."default",
-    kd_member_group character varying(10) COLLATE pg_catalog."default",
+    kd_member_group character varying(20) COLLATE pg_catalog."default",
     CONSTRAINT tm_member_role_pkey PRIMARY KEY (id)
 )
 
