@@ -1,0 +1,25 @@
+-- Table: public.tm_vendor
+
+-- DROP TABLE IF EXISTS public.tm_vendor;
+
+CREATE TABLE IF NOT EXISTS public.tm_vendor
+(
+    id integer NOT NULL DEFAULT nextval('tm_vendor_id_seq'::regclass),
+    tgl_create timestamp without time zone DEFAULT CURRENT_TIMESTAMP,
+    user_create character varying(20) COLLATE pg_catalog."default" DEFAULT 'SYSTEM'::character varying,
+    tgl_modify timestamp without time zone,
+    user_modify character varying(20) COLLATE pg_catalog."default",
+    ket_modify character varying(255) COLLATE pg_catalog."default",
+    kd_vendor character varying(20) COLLATE pg_catalog."default",
+    nama_vendor character varying(255) COLLATE pg_catalog."default",
+    kd_jenis_vendor character varying(20) COLLATE pg_catalog."default",
+    alamat character varying(255) COLLATE pg_catalog."default",
+    status_aktif character varying(1) COLLATE pg_catalog."default" DEFAULT 'Y'::character varying,
+    ket_status character varying(255) COLLATE pg_catalog."default",
+    CONSTRAINT tm_vendor_pkey PRIMARY KEY (id)
+)
+
+TABLESPACE pg_default;
+
+ALTER TABLE IF EXISTS public.tm_vendor
+    OWNER to postgres;
