@@ -8,7 +8,7 @@ CREATE TABLE IF NOT EXISTS public.tr_lookup
     tgl_create timestamp without time zone DEFAULT CURRENT_TIMESTAMP,
     user_create character varying(20) COLLATE pg_catalog."default" DEFAULT 'SYSTEM'::character varying,
     tipe_lookup character varying(20) COLLATE pg_catalog."default",
-    kd_lookup character varying(10) COLLATE pg_catalog."default",
+    kd_lookup character varying(20) COLLATE pg_catalog."default",
     nama_lookup character varying(50) COLLATE pg_catalog."default",
     keterangan character varying(255) COLLATE pg_catalog."default",
     st_aktif character varying(1) COLLATE pg_catalog."default" DEFAULT 'Y'::character varying,
